erien nyttö ei bugaa, kertoo mistä laskusta muistutetaan

--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -1455,7 +1455,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel79">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Laskutuslis&#xe4;:"/>
+            <Property name="text" type="java.lang.String" value="Muistutusmaksu:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel80">
